<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Girlsday</string>
    <string name="app_id">168059013349612</string>
    
	<string name="action_refresh">Refresh</string>
	<string name="action_refresh_toast">Selected Refresh</string>
    <string name="action_settings">Settings</string>
	<string name="action_settings_toast">Selected Settings</string>
    
    <string name="click_item">Click Item</string>
    
    <string name="detail_item_action_like">Like</string>
    <string name="detail_item_action_like_toast">Selected Like</string>
    <string name="detail_item_action_reply">Reply</string>
    <string name="detail_item_action_reply_toast">Selected Reply</string>
    <string name="detail_item_action_info">Info</string>
    <string name="detail_item_action_info_toast">Selected Info</string>
    
    <string name="detail_item_sub_action_kakao">Kakao Link</string>
    <string name="detail_item_sub_action_kakao_toast">Selected Kakao Link</string>
    <string name="detail_item_sub_action_detailview">Detailview</string>
    <string name="detail_item_sub_action_detailview_toast">Selected Detailview</string>
    
    <string name="intro_guest_button">Guest</string>
    <string name="loading_title">Loading</string>
    <string name="loading_message">Please, wait…</string>
    
    <string name="kakaolink_title">GirlsDay in Topic Inside</string>
    <string name="kakaolink_message"></string>
    
    <string name="list_end_message">End of list</string>
    
    <string name="photo_save">Save</string>
    <string name="photo_save_toast">Completed</string>
    
    <string name="connection_title">Network connection</string>
    <string name="connection_message">Connected internet</string>
    <string name="connection_warning_message">Check your internet connection</string>
    
</resources>